--- a/code/packages/client/public/index.html
+++ b/code/packages/client/public/index.html
@@ -38,5 +38,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="jquery.js"></script>
+  <!-- <script src="jquery.js"></script> -->
 </html>
