up user order and checkout online

--- a/code/packages/client/public/index.html
+++ b/code/packages/client/public/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <script src="https://js.stripe.com/v3/"></script> <!-- thêm checkout stripe-->
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -23,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
@@ -39,4 +41,5 @@
     -->
   </body>
   <script src="jquery.js"></script>
+
 </html>
