fix bug and add order table

--- a/code/packages/client/public/index.html
+++ b/code/packages/client/public/index.html
@@ -26,7 +26,13 @@
     <style>
       .MicrosoftTranslatorWidget {
         position: fixed;
-        top: 5vh;
+        bottom: 5vh;
+        left: 1vw;
+        z-index: 1000;
+      }
+      .google_translate_element {
+        position: fixed;
+        bottom: 10vh;
         left: 1vw;
         z-index: 1000;
       }
@@ -34,6 +40,22 @@
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
+    <div id="google_translate_element" class="google_translate_element"></div>
+
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          { pageLanguage: 'en' },
+          'google_translate_element'
+        );
+      }
+    </script>
+
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
+
     <div
       id="MicrosoftTranslatorWidget"
       class="Dark MicrosoftTranslatorWidget"
@@ -57,6 +79,8 @@
         }
       }, 0);
     </script>
+    <script id="stripe-js" src="https://js.stripe.com/v3/" async></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
